add image for branding
git-svn-id: http://talendforge.org/svn/mdm/trunk@34248 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tom/build.properties
+++ b/org.talend.rcp.branding.tom/build.properties
@@ -1,6 +1,16 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
-               META-INF/lib/z.commons-lang-2.1.jar,\
-               plugin.xml
+bin.includes = .,\
+               plugin.xml,\
+               META-INF/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               content/,\
+               icons/,\
+               designer.ico,\
+               introContent.xml,\
+               mdm.product,\
+               plugin.properties,\
+               plugin_customization.ini,\
+               splash.bmp
