--- a/org.talend.rcp.branding.tom/build.properties
+++ b/org.talend.rcp.branding.tom/build.properties
@@ -13,4 +13,5 @@ bin.includes = .,\
                mdm.product,\
                plugin.properties,\
                plugin_customization.ini,\
-               splash.bmp
+               splash.bmp,\
+               config.xml
