fix bug 0010442: Change the title "MDM Server View" to "MDM Server".
git-svn-id: http://talendforge.org/svn/mdm/trunk@34731 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.workbench/plugin.xml
+++ b/org.talend.mdm.workbench/plugin.xml
@@ -15,7 +15,7 @@
             class="com.amalto.workbench.views.ServerView"
             icon="icons/talend-picto-small.gif"
             id="org.talend.mdm.workbench.views.ServerView"
-            name="MDM Server View">
+            name="MDM Server">
             <!--name="Talend MDM Server View"-->
       </view>
    </extension>
