change <eclipse.refreshLocal resource="${basedir}"/> into <!--eclipse.refreshLocal resource="${basedir}"/-->
git-svn-id: http://talendforge.org/svn/tem/trunk@35398 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.webapp.hierarchical/build.xml
+++ b/org.talend.mdm.webapp.hierarchical/build.xml
@@ -15,7 +15,7 @@
           target: all              
          ================================= -->
 	<target name="all" depends="version,package,undeploy,deploy" description="--> Hierarchical WebApp">
-		<eclipse.refreshLocal resource="/org.talend.mdm.webapp.hierarchical"/>
+		<!--eclipse.refreshLocal resource="/org.talend.mdm.webapp.hierarchical"/-->
 	</target>
 	
    	<target name="version"  description="Maintain build.date property">
