Modify plugin and product parameters
git-svn-id: http://talendforge.org/svn/tem/trunk@35556 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tementerprise/plugin.xml
+++ b/org.talend.rcp.branding.tementerprise/plugin.xml
@@ -54,11 +54,11 @@
       <intro
             class="org.eclipse.ui.intro.config.CustomizableIntroPart"
             icon="platform:/plugin/org.talend.rcp/icons/appli_16x16.png"
-            id="org.talend.rcp.branding.tdqenterprise.intro">
+            id="org.talend.rcp.branding.tementerprise.intro">
       </intro>
       <introProductBinding
-            introId="org.talend.rcp.branding.tdqenterprise.intro"
-            productId="org.talend.rcp.branding.tdqenterprise.product">
+            introId="org.talend.rcp.branding.tementerprise.intro"
+            productId="org.talend.rcp.branding.tementerprise.product">
       </introProductBinding>
    </extension>
       <extension
