--- a/org.talend.mdm.workbench/plugin.xml
+++ b/org.talend.mdm.workbench/plugin.xml
@@ -6,7 +6,7 @@
    <extension
          point="org.eclipse.ui.views">
       <category
-            name="Talend MDM Workbench"
+            name="Talend"
             id="org.talend.mdm.workbench">
       </category>
       <view
@@ -48,7 +48,7 @@
             fixed="false"
             icon="icons/talend-picto-small.gif"
             id="org.talend.mdm.perspective"
-            name="Talend MDM Studio">
+            name="MDM">
       </perspective>
    </extension>
    <!-- add the following to let MDM perspective to be show in TIS/TDQ -->
