Refactor : correctly create TEM EE branding plugin and feature
git-svn-id: http://talendforge.org/svn/tem/trunk@35854 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tementerprise/.project
+++ b/org.talend.rcp.branding.tementerprise/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.talend.rcp.branding.tdqenterprise</name>
+	<name>org.talend.rcp.branding.tementerprise</name>
 	<comment></comment>
 	<projects>
 	</projects>
