--- a/org.talend.rcp.branding.tementerprise/build.properties
+++ b/org.talend.rcp.branding.tementerprise/build.properties
@@ -13,6 +13,6 @@ bin.includes = META-INF/,\
                about.mappings,\
                about.ini,\
                resources/,\
-               tdqenterprise.product
+               tementerprise.product
 javacSource=1.5
 javacTarget=1.5
