--- a/org.talend.rcp.branding.tementerprise-feature/.project
+++ b/org.talend.rcp.branding.tementerprise-feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.talend.rcp.branding.tdqenterprise-feature</name>
+	<name>org.talend.rcp.branding.tementerprise-feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
