0011155: Workbench plug-in branding
git-svn-id: http://talendforge.org/svn/tom/trunk@35948 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tom/about.properties
+++ b/org.talend.rcp.branding.tom/about.properties
@@ -4,9 +4,8 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-blurb=Talend MDM Studio\n\
+productBlurb=Talend MDM Studio\n\
 \n\
 Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\Visit http://www.talend.com
-
