--- a/org.talend.rcp.branding.tom/plugin.properties
+++ b/org.talend.rcp.branding.tom/plugin.properties
@@ -1,2 +1,3 @@
 productBlurb = {2}\n\nVersion: {1}\nBuild id: {0}\n\n\n(c) Copyright 2006-2009 Talend Inc.  All rights reserved.\nVisit {3}
-productName=Talend MDM Studio
+productName = Talend MDM Studio(Community Edition)
+
