add registion ui
git-svn-id: http://talendforge.org/svn/tom/trunk@36300 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.workbench/build.properties
+++ b/org.talend.mdm.workbench/build.properties
@@ -49,7 +49,11 @@ bin.includes = icons/,\
                plugin_customization.ini,\
                splash.bmp,\
                mdm.product,\
-               schema/
+               schema/,\
+               META-INF/lib/axis.jar,\
+               META-INF/lib/jaxrpc.jar,\
+               META-INF/lib/commons-discovery-0.2.jar,\
+               META-INF/lib/wsdl4j-1.5.1.jar
 src.includes = src/,\
                META-INF/,\
                config.xml,\
