--- a/org.talend.mdm.workbench/plugin.xml
+++ b/org.talend.mdm.workbench/plugin.xml
@@ -2,6 +2,7 @@
 
 <plugin>
    <extension-point id="AvailableModel" name="AvailableModel" schema="schema/AvailableModel.exsd"/>
+   <extension-point id="service" name="Service Registration" schema="schema/service.exsd"/>
 
    <extension
          point="org.eclipse.ui.views">
