add branding service
git-svn-id: http://talendforge.org/svn/tom/trunk@36378 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tom/plugin.xml
+++ b/org.talend.rcp.branding.tom/plugin.xml
@@ -80,4 +80,11 @@
             productId="org.talend.rcp.branding.tom.product">
       </introProductBinding>
    </extension>
+      <extension
+            point="org.talend.mdm.workbench.service">
+         <Service
+               class="org.talend.rcp.branding.tom.TomBrandingService"
+               serviceId="com.amalto.workbench.service.branding.IBrandingService">
+         </Service>
+      </extension>
 </plugin>
