--- a/org.talend.rcp.branding.tementerprise/about.properties
+++ b/org.talend.rcp.branding.tementerprise/about.properties
@@ -4,5 +4,9 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-blurb=Talend Enterprise MDM Enterprise Edition\n\nVersion: {featureVersion}\nBuild id: {0}\n\nVisit http://www.talend.com
+blurb=Talend MDM Studio Enterprise Edition (TIS TE with DQ option)\n\
+\n\
+Version: {featureVersion}\n\
+Build id: {0}\n\
+\n\Visit http://www.talend.com
 
