replace splash screens for 4.0
git-svn-id: http://talendforge.org/svn/tom/trunk@38142 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tom/plugin.xml
+++ b/org.talend.rcp.branding.tom/plugin.xml
@@ -13,7 +13,7 @@
         </property>
         <property
               name="aboutImage"
-              value="icons/about.gif">
+              value="icons/about.jpg">
         </property>
         <property
               name="aboutText"
