0011835: Unlimited depth in hierarchy viewer + async update of the tree instead of one shot query
git-svn-id: http://talendforge.org/svn/tem/trunk@38172 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.webapp.hierarchical/src/WEB-INF/web.xml
+++ b/org.talend.mdm.webapp.hierarchical/src/WEB-INF/web.xml
@@ -23,6 +23,17 @@
         <display-name>HierarchicalTreeLoadServlet</display-name>
         <servlet-class>com.amalto.webapp.v3.hierarchical.servlet.HierarchicalTreeLoadServlet</servlet-class>
     </servlet>
+    
+    <servlet>
+        <servlet-name>DerivedHierarchyTreeLoadServlet</servlet-name>
+        <display-name>DerivedHierarchyTreeLoadServlet</display-name>
+        <servlet-class>com.amalto.webapp.v3.hierarchical.servlet.DerivedHierarchyTreeLoadServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>DerivedHierarchyTreeLoadServlet</servlet-name>
+        <url-pattern>/secure/DerivedHierarchyTreeLoadServlet</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>HierarchicalTreeLoadServlet</servlet-name>
