Modify application name to run
git-svn-id: http://talendforge.org/svn/tom/trunk@40888 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tombundle/plugin.xml
+++ b/org.talend.rcp.branding.tombundle/plugin.xml
@@ -67,7 +67,7 @@
          point="org.eclipse.core.runtime.applications">
       <application>
          <run
-               class="org.talend.datacleansing.core.ui.intro.Application">
+               class="org.talend.rcp.intro.Application">
          </run>
       </application>
    </extension>
