Modify welcome page and fix TOP perspective issue
git-svn-id: http://talendforge.org/svn/tom/trunk@40907 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tombundle/plugin.xml
+++ b/org.talend.rcp.branding.tombundle/plugin.xml
@@ -77,4 +77,15 @@
                class="org.talend.rcp.branding.tombundle.TOMBundleBrandingService"
                serviceId="org.talend.core.ui.branding.IBrandingService"/>
       </extension>
+      <extension
+         point="org.talend.core.talendperspectives">
+         <TalendPerspective
+            refPerspectiveId="org.talend.dataprofiler.DataProfilingPerspective"
+            talendPerspectiveId="org.talend.rcp.DQPerspective">
+         </TalendPerspective>
+         <TalendPerspective
+            refPerspectiveId="net.sourceforge.sqlexplorer.plugin.perspectives.SQLExplorerPluginPerspective"
+            talendPerspectiveId="org.talend.rcp.DQExplorePerspective">
+         </TalendPerspective>
+      </extension>
 </plugin>
