--- a/org.talend.mdm.workbench/.classpath
+++ b/org.talend.mdm.workbench/.classpath
@@ -29,5 +29,6 @@
 	<classpathentry kind="lib" path="META-INF/lib/httpclient-4.0.jar"/>
 	<classpathentry kind="lib" path="META-INF/lib/httpcore-4.0.1.jar"/>
 	<classpathentry kind="lib" path="META-INF/lib/httpmime-4.0.jar"/>
+	<classpathentry kind="lib" path="META-INF/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
