add feature  	 0013500: TIS repository integration
git-svn-id: http://talendforge.org/svn/tom/trunk@44416 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.workbench/plugin.xml
+++ b/org.talend.mdm.workbench/plugin.xml
@@ -60,6 +60,12 @@
             talendPerspectiveId="org.talend.mdm.tis.perspective">
       </TalendPerspective>
    </extension>
+  <extension
+        point="org.talend.mdm.workbench.AvailableModel">
+     <model
+           class="com.amalto.workbench.availablemodel.JobAvailableModel">
+     </model>
+  </extension>
 
    
 </plugin>
