--- a/org.talend.mdm.workbench/build.properties
+++ b/org.talend.mdm.workbench/build.properties
@@ -53,7 +53,9 @@ bin.includes = icons/,\
                META-INF/lib/axis.jar,\
                META-INF/lib/jaxrpc.jar,\
                META-INF/lib/commons-discovery-0.2.jar,\
-               META-INF/lib/wsdl4j-1.5.1.jar
+               META-INF/lib/wsdl4j-1.5.1.jar,\
+               META-INF/lib/json-20090211.jar,\
+               META-INF/lib/ezmorph-1.0.jar
 src.includes = src/,\
                META-INF/,\
                config.xml,\
