MDM fixed the IBrandingService exception The org.talend.core.service extension point has been renamed into org.talend.core.runtime.service The project org.talend.rcp.branding.temtdqprofrtx was not properly setup as a Java project
git-svn-id: http://talendforge.org/svn/tem/trunk@47762 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tementerprise/plugin.xml
+++ b/org.talend.rcp.branding.tementerprise/plugin.xml
@@ -71,9 +71,10 @@
       </application>
    </extension>
       <extension
-            point="org.talend.core.service">
+            point="org.talend.core.runtime.service">
          <Service
                class="org.talend.rcp.branding.tementerprise.TEMBrandingService"
-               serviceId="org.talend.core.ui.branding.IBrandingService"/>
+               serviceId="org.talend.core.ui.branding.IBrandingService">
+         </Service>
       </extension>
 </plugin>
