MDM fixed the IBrandingService exception The org.talend.core.service extension point has been renamed into org.talend.core.runtime.service The project org.talend.rcp.branding.temtdqprofrtx was not properly setup as a Java project
git-svn-id: http://talendforge.org/svn/tom/trunk@47762 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tombundle/plugin.xml
+++ b/org.talend.rcp.branding.tombundle/plugin.xml
@@ -72,12 +72,6 @@
       </application>
    </extension>
       <extension
-            point="org.talend.core.service">
-         <Service
-               class="org.talend.rcp.branding.tombundle.TOMBundleBrandingService"
-               serviceId="org.talend.core.ui.branding.IBrandingService"/>
-      </extension>
-      <extension
          point="org.talend.core.talendperspectives">
          <TalendPerspective
             refPerspectiveId="org.talend.dataprofiler.DataProfilingPerspective"
@@ -87,5 +81,12 @@
             refPerspectiveId="net.sourceforge.sqlexplorer.plugin.perspectives.SQLExplorerPluginPerspective"
             talendPerspectiveId="org.talend.rcp.DQExplorePerspective">
          </TalendPerspective>
+      </extension>
+      <extension
+            point="org.talend.core.runtime.service">
+         <Service
+               class="org.talend.rcp.branding.tombundle.TOMBundleBrandingService"
+               serviceId="org.talend.core.ui.branding.IBrandingService">
+         </Service>
       </extension>
 </plugin>
