--- a/org.talend.rcp.branding.tombundle/plugin.properties
+++ b/org.talend.rcp.branding.tombundle/plugin.properties
@@ -1,4 +1,4 @@
 #Created by JInto - www.guh-software.de
 #Mon May 11 15:19:56 CEST 2009
-productBlurb={2}\n\nVersion\: {1}\nBuild id\: {0}\n\n\n(c) Copyright 2009 Talend Inc.  All rights reserved.\nVisit {3}
+productBlurb={2}\n\nVersion\: {1}\nBuild id\: {0}\n\n\n(c) Copyright 2006-2010 Talend Inc.  All rights reserved.\nVisit {3}
 productName=Talend MDM Studio (TOS and TOP)
