add feature 0017309: Replace the current XSD source view by the "standard" Eclipse XSD views
git-svn-id: http://talendforge.org/svn/tom/trunk@52381 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.workbench/plugin.xml
+++ b/org.talend.mdm.workbench/plugin.xml
@@ -41,6 +41,13 @@
             id="com.amalto.workbench.editors.XObjectRevisionBrowser"
             name="com.amalto.workbench.editors.XObjectRevisionBrowser">
       </editor>
+      <editor
+            class="com.amalto.workbench.editors.xsdeditor.XSDEditor"
+            default="false"
+            icon="icons/appli_16x16.gif"
+            id="com.amalto.workbench.editors.xsdeditor.XSDEditor"
+            name="com.amalto.workbench.editors.xsdeditor.XSDEditor">
+      </editor>
    </extension>
    <extension
          point="org.eclipse.ui.perspectives">
